--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </dl>
           </li>
           <li class="layui-nav-item">
-            <a href=""><span class="iconfont icon-tuichu"></span>退出</a>
+            <a href="javascript:;" id="btnLogout"><span class="iconfont icon-tuichu"></span>退出</a>
           </li>
         </ul>
       </div>
@@ -42,7 +42,7 @@
           <div class="userinfo">
             <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
             <span class="text-avatar">A</span>
-            <span id="welcome">欢迎 ***</span>
+            <span id="welcome">欢迎 </span>
           </div>
           <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
           <ul class="layui-nav layui-nav-tree" lay-shrink="all">
@@ -93,5 +93,11 @@
     </div>
     <!-- 导入 layui 的JS文件 -->
     <script src="assets/lib/layui/layui.all.js"></script>
+    <!-- 导入jquery -->
+    <script src="assets/lib/jquery.js"></script>
+    <!-- 导入自己封装的baseAPI1 -->
+    <script src="assets/js/baseAPI1.js"></script>
+    <!-- 导入自己js文件 -->
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
